RESOLVED FIXED126457
[iOS] [WK2] TileController creates all tiles on first paint, making it slow and consuming lots of memory
https://bugs.webkit.org/show_bug.cgi?id=126457
Summary [iOS] [WK2] TileController creates all tiles on first paint, making it slow a...
Tim Horton
Reported 2014-01-03 13:41:34 PST
Otherwise, we make all of the tiles upfront. We can reuse the view exposed rect mechanism that already exists, we just have to: 1. Hook it up to WKView/WKContentView on iOS. 2. Plumb it through RemoteLayerTreeDrawingArea. 3. Make the WebPage(Proxy) bits available to iOS. There is a good bit of cleanup of all of this stuff that should happen, but this at least gets us to a functional state.
Attachments
patch (13.40 KB, patch)
2014-01-03 13:54 PST, Tim Horton
no flags
fix the title for sam (13.43 KB, patch)
2014-01-03 14:03 PST, Tim Horton
simon.fraser: review+
Radar WebKit Bug Importer
Comment 1 2014-01-03 13:41:45 PST
Tim Horton
Comment 2 2014-01-03 13:54:35 PST
Tim Horton
Comment 3 2014-01-03 14:03:38 PST
Created attachment 220336 [details] fix the title for sam
Tim Horton
Comment 4 2014-01-03 14:11:08 PST
Comment on attachment 220336 [details] fix the title for sam View in context: https://bugs.webkit.org/attachment.cgi?id=220336&action=review > Source/WebKit2/ChangeLog:24 > + We can't use the existing WKContentView didScrollTo:, because it is > + expected to only fire when a scroll lands. Instead, add didLiveScrollTo:, > + which fires continually as scrolling progresses. Naming proposal: rename didScrollTo: to didFinishScrollTo:, and use didScrollTo: instead of didLiveScrollTo:
Simon Fraser (smfr)
Comment 5 2014-01-03 14:11:23 PST
Comment on attachment 220336 [details] fix the title for sam View in context: https://bugs.webkit.org/attachment.cgi?id=220336&action=review > Source/WebKit2/UIProcess/API/ios/WKContentView.h:68 > +- (void)didLiveScrollTo:(CGPoint)contentOffset; Hmm, we don't really use the term "live scroll" anywhere else. > Source/WebKit2/UIProcess/API/ios/WKContentView.mm:141 > + _page->viewExposedRectChanged(FloatRect(_page->viewExposedRect().location(), FloatSize(size)), true); No idea what true means. > Source/WebKit2/UIProcess/WebPageProxy.cpp:4398 > +void WebPageProxy::viewExposedRectChanged(const FloatRect& exposedRect, bool clipsToExposedRect) Please replace clipsToExposedRect with an enum
Tim Horton
Comment 6 2014-01-03 16:33:02 PST
Note You need to log in before you can comment on or make changes to this bug.