Source/WebKit2/UIProcess/WebPageProxy.h
@@ -463,7 +463,9 @@ public:
 
 #if PLATFORM(MAC)
     void windowAndViewFramesChanged(const WebCore::FloatRect& viewFrameInWindowCoordinates, const WebCore::FloatPoint& accessibilityViewCoordinates);
-    void viewExposedRectChanged(const WebCore::FloatRect& exposedRect, bool);
+    enum class ClipsToExposedRect { DoNotClip, Clip };
+    void viewExposedRectChanged(const WebCore::FloatRect& exposedRect, ClipsToExposedRect);
+    WebCore::FloatRect viewExposedRect() const { return m_exposedRect; }
     void exposedRectChangedTimerFired(WebCore::Timer<WebPageProxy>*);
     void setMainFrameIsScrollable(bool);
 
@@ -1355,13 +1357,11 @@ private:
     bool m_waitingForDidUpdateViewState;
 
 #if PLATFORM(MAC)
-#if !PLATFORM(IOS)
     WebCore::Timer<WebPageProxy> m_exposedRectChangedTimer;
-#endif // PLATFORM(IOS)
     WebCore::FloatRect m_exposedRect;
     WebCore::FloatRect m_lastSentExposedRect;
-    bool m_clipsToExposedRect;
-    bool m_lastSentClipsToExposedRect;
+    ClipsToExposedRect m_clipsToExposedRect;
+    ClipsToExposedRect m_lastSentClipsToExposedRect;
 #endif
 
 #if PLATFORM(MAC)
