Source/WebKit2/WebProcess/WebPage/mac/RemoteLayerTreeDrawingArea.h
@@ -69,6 +69,9 @@ private:
     virtual void forceRepaint() OVERRIDE;
     virtual bool forceRepaintAsync(uint64_t) OVERRIDE { return false; }
 
+    virtual void setExposedRect(const WebCore::FloatRect&) OVERRIDE;
+    virtual void setClipsToExposedRect(bool) OVERRIDE;
+
     // WebCore::GraphicsLayerClient
     virtual void notifyAnimationStarted(const WebCore::GraphicsLayer*, double time) OVERRIDE { }
     virtual void notifyFlushRequired(const WebCore::GraphicsLayer*) OVERRIDE { }
@@ -80,12 +83,21 @@ private:
     virtual bool allowCompositingLayerVisualDegradation() const OVERRIDE { return false; }
 #endif
 
+    void updateMainFrameClipsToExposedRect();
+    void updateScrolledExposedRect();
+
+    WebCore::TiledBacking* mainFrameTiledBacking() const;
+
     std::unique_ptr<RemoteLayerTreeContext> m_remoteLayerTreeContext;
     RefPtr<WebCore::PlatformCALayer> m_rootLayer;
 
     HashMap<PageOverlay*, std::unique_ptr<GraphicsLayerCARemote>> m_pageOverlayLayers;
 
     WebCore::IntSize m_viewSize;
+
+    WebCore::FloatRect m_exposedRect;
+    WebCore::FloatRect m_scrolledExposedRect;
+    bool m_clipsToExposedRect;
 };
 
 } // namespace WebKit
